# Database-Administration

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yml
openpectus_database_administration/: __init__.py  app.py  auth_provider.py
openpectus_database_administration/templates/: index.html  login.html  login_denied.html  login_denied_missing_roles.html
